--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="css/destyle.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://takaokasatoshi.github.io/portfolio/css/style.css">
   <link rel="stylesheet" href="css/swiper.min.css">
   <script src="js/swiper.min.js"></script>
 <link href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" rel="stylesheet">
